infrastructure/kubevirt/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kubevirt-allow-ingress
  namespace: kubevirt-system
spec:
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.1.0/24
      ports:
        - port: 8444
          protocol: TCP
        - port: 8443
          protocol: TCP
  podSelector:
    matchExpressions:
      - key: kubevirt.io
        operator: In
        values:
          - virt-operator
          - virt-api
  policyTypes:
    - Ingress
